--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,12 +14,12 @@ test:
     - cd ..
     - git clone https://gitlab.labs.nic.cz/turris/foris-controller.git
     - cd foris-controller
-    - (git checkout ${CI_COMMIT_REF_NAME} || true)
+    - (git checkout refs/remotes/origin/${CI_COMMIT_REF_NAME} || true)
     - python setup.py install
     - cd ..
     - git clone https://gitlab.labs.nic.cz/turris/foris-client.git
     - cd foris-client
-    - (git checkout ${CI_COMMIT_REF_NAME} || true)
+    - (git checkout refs/remotes/origin/${CI_COMMIT_REF_NAME} || true)
     - python setup.py install
     - cd ..
     - python setup.py install
