--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,7 @@ test:
     - pip install -r requirements.txt
     - git clone https://gitlab.labs.nic.cz/turris/foris-schema.git
     - cd foris-schema
+    - (git checkout refs/remotes/origin/${CI_COMMIT_REF_NAME} || true)
     - python setup.py install
     - cd ..
     - git clone https://gitlab.labs.nic.cz/turris/foris-controller.git
