use newer python-websocket-server

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 pytest
 pytest-runner
 websocket-client
--e git+https://github.com/shenek/python-websocket-server.git@logging_update#egg=websocket-server
+-e git+https://github.com/shenek/python-websocket-server.git@to_upstream2#egg=websocket-server
