--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,7 @@
-image: registry.labs.nic.cz/turris/foris-ci
-
 stages:
   - test
 
-test:
-  stage: test
-
+.run_script: &run_script
   script:
     - pip install -r requirements.txt
     - git clone https://gitlab.labs.nic.cz/turris/foris-schema.git
@@ -27,3 +23,13 @@ test:
     - rm -rf {foris-controller,foris-schema,foris-client}
     - export LD_LIBRARY_PATH=:/usr/local/lib
     - python setup.py test
+
+test_python2:
+  image: registry.labs.nic.cz/turris/foris-ci/python2
+  stage: test
+  <<: *run_script
+
+test_python3:
+  image: registry.labs.nic.cz/turris/foris-ci/python3
+  stage: test
+  <<: *run_script
