CI: Use Python 3.10 as the default Python for testing
Upcoming Turris OS 7.0 will use Python 3.10.

Run test on that particular Python version, instead of the CI default
Python, which might change anytime.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 before_script:
   - pip install virtualenv
-  - virtualenv -p "$(which python)" /tmp/test
+  - virtualenv -p python3.10 /tmp/test
 
 stages:
   - test
