fix: make sure that websockes library is < 14.0, the next versions are not compatible

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ authors = [
 ]
 dependencies = [
     "foris-client",
-    "websockets",
+    "websockets < 14.0",
 ]
 
 [project.optional-dependencies]
